Fixed resource page having extra horizontal scrolling, fixed calendar showing a bad contrast ratio color on past reserved times when hovering, algined resource page lists with other text, and deleted 2 empty css rules.

--- a/app/pages/resource/reservation-calendar/time-slots/_time-slots.scss
+++ b/app/pages/resource/reservation-calendar/time-slots/_time-slots.scss
@@ -75,7 +75,6 @@
     &--past {
       &:hover {
         cursor: not-allowed;
-        background-color: $gray-light;
       }
     }
     &--disabled,
